--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@
 body {
   font-family: "Lato", sans-serif;
   /* font-family: "Bebas Neue", cursive; */
-  background: rgb(35, 82, 66);
 }
 
 img {
@@ -205,3 +204,222 @@ header p {
 }
 
 /* ===CAB SECTION END=== */
+
+/* ===TARIEFS SECTION START=== */
+
+#tariffs {
+  padding: 70px 0;
+}
+
+.tariffs__heading2 {
+  color: #ffc61a;
+  font-size: 35px;
+  font-weight: bolder;
+}
+
+.tariffs__heading1 {
+  color: #010101;
+  font-size: 44px;
+  font-weight: bolder;
+  margin-top: -15px;
+  margin-bottom: 140px;
+}
+
+.tariffs__card {
+  background: #f5f4f2;
+  padding: 0px 36px 18px;
+}
+
+.tariffs__card img,
+.tariffs__card__middle img {
+  margin-top: -80px;
+}
+
+.tariffs__card h3 {
+  font-size: 30px;
+  font-weight: bolder;
+  color: #010101;
+}
+
+.tariffs__card p {
+  font-size: 18px;
+}
+
+.tariffs__card h1 {
+  color: #ffc61a;
+  font-size: 44px;
+  font-weight: bolder;
+  margin-bottom: 32px;
+}
+
+.tariffs__btn {
+  background: #ffc61a;
+  color: #010101;
+  padding: 5px 32px;
+  font-family: "Bebas Neue", cursive;
+  font-size: 30px;
+  border: none;
+  border-radius: 8px;
+}
+
+.tariffs__card__middle {
+  background: #ffc61a;
+  padding: 0px 36px 18px;
+  position: relative;
+}
+
+.tariffs__card__middle h3 {
+  font-size: 30px;
+  font-weight: bolder;
+  color: #010101;
+}
+
+.tariffs__card__middle p {
+  font-size: 18px;
+}
+
+.tariffs__card__middle h1 {
+  color: #010101;
+  font-size: 44px;
+  font-weight: bolder;
+  margin-bottom: 32px;
+}
+
+.tariffs__card__middle .tariffs__btn {
+  background: #010101;
+  color: #fff;
+  padding: 5px 32px;
+  font-family: "Bebas Neue", cursive;
+  font-size: 30px;
+  border: none;
+  border-radius: 8px;
+}
+
+.tariffs__card__middle .star__img {
+  width: 74px;
+  height: 74px;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+}
+
+/* ===TARIEFS SECTION END=== */
+
+/* ===SERVICES SECTION START=== */
+
+#services {
+  padding: 80px 0;
+  background-image: url(./images/second-bg.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.services__content {
+  display: flex;
+  gap: 32px;
+}
+
+.services__content img {
+  width: 80px;
+  height: 80px;
+}
+
+.services__content h4 {
+  color: #ffc61a;
+  font-size: 25px;
+  font-weight: bolder;
+}
+
+.services__content p {
+  max-width: 375px;
+  color: #fff;
+  margin-top: 14px;
+  font-size: 18px;
+}
+
+#services .tariffs__btn {
+  margin-top: 70px;
+}
+
+/* ===SERVICES SECTION END=== */
+
+/* ===CONTENT SECTION START=== */
+
+#content {
+  padding-top: 70px;
+}
+
+.content__left {
+  max-width: 430px;
+}
+
+.content__left h3 {
+  color: #010101;
+  font-size: 26px;
+  font-weight: bolder;
+}
+
+.content__left p {
+  max-width: 380px;
+  font-size: 18px;
+  margin-top: 16px;
+}
+
+.content__img {
+  margin-top: 60px;
+  display: flex;
+  gap: 10px;
+}
+
+.content__img img {
+  width: 210px;
+  height: 70px;
+}
+
+/* ===CONTENT SECTION END=== */
+
+/* ===TESTIMONIAL SECTION START=== */
+
+#testimonial {
+  background-image: url(./images/testimonial-bg.jpg);
+  background-size: cover;
+  background-position: center;
+  padding: 70px 0;
+}
+
+.testimonial__left {
+  background: #010101;
+  padding: 32px;
+  border-radius: 32px;
+}
+
+.testimonial__left p {
+  color: #fff;
+  font-size: 18px;
+}
+
+.testimonial__profile {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+
+.testimonial__profile img {
+  width: 80px;
+  height: 80px;
+}
+
+.testimonial__profile__content h3 {
+  font-size: 25px;
+  font-weight: bolder;
+  color: #ffc61a;
+}
+
+.testimonial__profile__content p {
+  /* margin-top: -10px; */
+  font-size: 18px;
+  font-weight: bolder;
+}
+
+/* ===TESTIMONIAL SECTION END=== */
