--- a/responsive.css
+++ b/responsive.css
@@ -83,6 +83,22 @@
   .second__testi {
     margin-top: 40px;
   }
+
+  /* ===INFO SECTION=== */
+
+  #info h4 {
+    font-size: 25px;
+  }
+
+  #info h1 {
+    font-size: 56px;
+  }
+
+  /* ===FOOTER=== */
+
+  .footer__right{
+    margin-top: 36px;
+  }
 }
 
 @media (max-width: 578px) {
@@ -113,6 +129,12 @@
     width: 150px;
     height: 50px;
   }
+
+    /* ===FOOTER=== */
+
+    .footer__right, .footer__middle{
+      margin-top: 36px;
+    }
 }
 
 @media (max-width: 450px) {
@@ -127,4 +149,14 @@
   .services__content p {
     margin-top: 5px;
   }
+
+    /* ===INFO SECTION=== */
+
+    #info h4 {
+      font-size: 20px;
+    }
+  
+    #info h1 {
+      font-size: 42px;
+    }
 }
